--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "method-override": "~2.1.1",
     "mongoose": "~3.8.12",
     "morgan": "~1.1.1",
-    "securerandom": "0.0.2",
-    "serve-favicon": "~2.0.1"
+    "securerandom": "0.0.2"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
